--- a/recovery/init.recovery.evita.rc
+++ b/recovery/init.recovery.evita.rc
@@ -1,4 +1,5 @@
 on boot
+    # CPU
     write /sys/module/rpm_resources/enable_low_power/L2_cache 1
     write /sys/module/rpm_resources/enable_low_power/pxo 1
     write /sys/module/rpm_resources/enable_low_power/vdd_dig 1
@@ -9,6 +10,18 @@ on boot
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 384000
     write /sys/devices/system/cpu/cpu1/cpufreq/scaling_min_freq 384000
     setprop recovery.perf.mode 0
+
+    # USB
+    write /sys/class/android_usb/android0/enable 0
+    write /sys/class/android_usb/android0/idVendor 0bb4
+    write /sys/class/android_usb/android0/idProduct 0ff9
+    write /sys/class/android_usb/android0/f_mass_storage/inquiry_string "HTC Phone                0000"
+    setprop usb.vendor 0bb4
+    setprop usb.product.adb 0ff9
+    setprop usb.product.mtpadb 0ca8
+
+    # Services
+    start choice_fn
     start chargeled
 
 on property:recovery.perf.mode=0
@@ -20,6 +33,18 @@ on property:recovery.perf.mode=1
     write /sys/devices/system/cpu/cpu1/online 1
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor performance
     write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor performance
+
+service choice_fn /sbin/choice_fn
+    disabled
+
+service power_test /sbin/power_test
+    disabled
+
+service offmode_charging /sbin/offmode_charging
+    disabled
+
+service detect_key /sbin/detect_key
+    disabled
 
 service chargeled /sbin/chargeled
     disabled
