--- a/recovery/root/init.recovery.evita.rc
+++ b/recovery/root/init.recovery.evita.rc
@@ -52,7 +52,7 @@ service detect_key /sbin/detect_key
 
 service chargeled /sbin/chargeled
     disabled
-    seclabel u:r:recovery:s0
+    seclabel u:r:healthd:s0
 
 service choice_fn /sbin/choice_fn
     disabled
@@ -64,7 +64,7 @@ service detect_key /sbin/detect_key
 
 service offmode_charging /sbin/offmode_charging
     disabled
-    seclabel u:r:recovery:s0
+    seclabel u:r:healthd:s0
 
 service power_test /sbin/power_test
     disabled
