--- a/rootdir/init.evita.rc
+++ b/rootdir/init.evita.rc
@@ -3,7 +3,6 @@ import init.evita.usb.rc
 on early-init
     mkdir /mnt/usbdisk 0755 system system
     write /sys/block/mmcblk0/bdi/read_ahead_kb 512
-    write /sys/block/mmcblk0/queue/scheduler noop
 
 on init
     # External storage directories
@@ -369,7 +368,6 @@ on property:sys.boot_completed=1
     write /sys/module/pm_8x60/modes/cpu1/standalone_power_collapse/idle_enabled 1
     write /sys/module/pm_8x60/modes/cpu0/power_collapse/idle_enabled 1
     write /sys/module/msm_thermal/core_control/enabled 0
-    write /sys/block/mmcblk0/queue/scheduler noop
     write /sys/devices/system/cpu/cpu0/online 1
     write /sys/devices/system/cpu/cpu1/online 1
     chown system system /sys/devices/system/cpu/cpufreq/ondemand/sampling_rate
@@ -467,18 +465,8 @@ on property:sys.perf.profile=0
 on property:sys.perf.profile=1
     stop mpdecision
     write /sys/devices/system/cpu/cpu1/online 1
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor ondemand
-    write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor ondemand
-    write /sys/devices/system/cpu/cpufreq/ondemand/up_threshold 90
-    write /sys/devices/system/cpu/cpufreq/ondemand/sampling_rate 85000
-    write /sys/devices/system/cpu/cpufreq/ondemand/sampling_down_factor 1
-    write /sys/devices/system/cpu/cpufreq/ondemand/down_differential 10
-    write /sys/devices/system/cpu/cpufreq/ondemand/io_is_busy 1
-    write /sys/devices/system/cpu/cpufreq/ondemand/up_threshold_multi_core 70
-    write /sys/devices/system/cpu/cpufreq/ondemand/down_differential_multi_core 3
-    write /sys/devices/system/cpu/cpufreq/ondemand/optimal_freq 918000
-    write /sys/devices/system/cpu/cpufreq/ondemand/sync_freq 1026000
-    write /sys/devices/system/cpu/cpufreq/ondemand/up_threshold_any_cpu_load 80
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor intelliactive
+    write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor intelliactive
     write /sys/devices/platform/kgsl-2d0.0/kgsl/kgsl-2d0/gpuclk 96000000
     write /sys/devices/platform/kgsl-2d0.0/kgsl/kgsl-2d0/max_gpuclk 200000000
     write /sys/devices/platform/kgsl-2d1.1/kgsl/kgsl-2d1/gpuclk 96000000
