--- a/rootdir/init.evita.rc
+++ b/rootdir/init.evita.rc
@@ -23,7 +23,7 @@ on init
     mkdir /devlog 0700 root root
 
 on fs
-    # for NFC
+    # For NFC
     symlink /system/vendor/pittpatt /vendor/pittpatt
     symlink /system/vendor/firmware/libpn544_fw.so /vendor/firmware/libpn544_fw.so
 
@@ -59,7 +59,7 @@ on post-fs-data
     # Bluetooth
     mkdir /data/misc/bluetooth 0770 bluetooth bluetooth
 
-    # WIFI
+    # WiFi
     mkdir /data/misc/wifi 0770 wifi wifi
     mkdir /data/misc/wifi/sockets 0770 wifi wifi
     mkdir /data/misc/wifi/hostapd 0770 wifi wifi
@@ -69,14 +69,14 @@ on post-fs-data
     # Audio
     mkdir /data/audio 0775 media audio
 
-    # Time-services
+    # Time Services
     mkdir /data/time 0700 system system
 
     # Set indication (checked by vold) that we have finished this action
     setprop vold.post_fs_data_done 1
 
 on boot
-    # create symlink to qcn wpa_supplicant folder
+    # Create symlink to qcn wpa_supplicant folder
     symlink /data/misc/wifi/wpa_supplicant /data/system/wpa_supplicant
     symlink /dev/socket/wpa_wlan0 /data/system/wpa_supplicant/wlan0
 
@@ -143,18 +143,6 @@ on boot
     chmod 0664 /sys/devices/virtual/graphics/fb1/video_mode
     chmod 0664 /sys/devices/virtual/graphics/fb1/format_3d
 
-    # Define TCP buffer sizes for various networks
-    setprop net.tcp.buffersize.default 4096,87380,704512,4096,16384,110208
-    setprop net.tcp.buffersize.edge    4093,26280,35040,4096,16384,35040
-    setprop net.tcp.buffersize.evdo    4094,87380,262144,4096,16384,262144
-    setprop net.tcp.buffersize.gprs    4092,30000,30000,4096,8760,11680
-    setprop net.tcp.buffersize.hsdpa   4094,87380,704512,4096,16384,262144
-    setprop net.tcp.buffersize.hspa    4094,87380,704512,4096,16384,262144
-    setprop net.tcp.buffersize.hspap   4094,87380,1220608,4096,16384,1220608
-    setprop net.tcp.buffersize.hsupa   4094,87380,704512,4096,16384,262144
-    setprop net.tcp.buffersize.umts    4094,87380,704512,4096,16384,110208
-    setprop net.tcp.buffersize.wifi    524288,1048576,2560000,524288,1048576,2560000
-
     # Change owner and group for media server and surface flinger
     chown system system /sys/devices/virtual/graphics/fb1/format_3d
     chown system system /sys/devices/virtual/graphics/fb1/hpd
@@ -208,11 +196,6 @@ on boot
 
 # Services start here
 
-service akmd /system/bin/akmd
-    class main
-    user compass
-    group compass misc input
-
 service setup_fs /system/bin/setup_fs mmcblk0p34
     class core
     user root
@@ -226,6 +209,11 @@ service fuse_sdcard0 /system/bin/sdcard -u 1023 -g 1023 -d /mnt/media_rw/sdcard0
 service fuse_usbdisk /system/bin/sdcard -u 1023 -g 1023 -d /mnt/media_rw/usbdisk /storage/usbdisk
     class late_start
     disabled
+
+service akmd /system/bin/akmd
+    class main
+    user compass
+    group compass misc input
 
 service dhcpcd_bt-pan /system/bin/dhcpcd -BKLG
     disabled
