--- a/rootdir/init.evita.rc
+++ b/rootdir/init.evita.rc
@@ -2,7 +2,7 @@ import init.evita.usb.rc
 
 on early-init
     mkdir /mnt/usbdisk 0755 system system
-    write /sys/block/mmcblk0/bdi/read_ahead_kb 512
+    write /sys/block/mmcblk0/queue/read_ahead_kb 512
 
 on init
     # External storage directories
@@ -66,6 +66,10 @@ on post-fs-data
     setprop vold.post_fs_data_done 1
 
 on boot
+    # Create symlink to qcn wpa_supplicant folder
+    symlink /data/misc/wifi/wpa_supplicant /data/system/wpa_supplicant
+    symlink /dev/socket/wpa_wlan0 /data/system/wpa_supplicant/wlan0
+
     # Mount debugfs for systrace
     mount debugfs /sys/kernel/debug /sys/kernel/debug
 
@@ -112,10 +116,6 @@ on boot
     chown system system /sys/class/htc_gyro/gyro/fifo_mode
     chown system system /sys/class/htc_gyro/gyro/reg_value
     chown system system /sys/class/htc_gyro/gyro/reg_addr
-
-    # Create symlink to qcn wpa_supplicant folder
-    symlink /data/misc/wifi/wpa_supplicant /data/system/wpa_supplicant
-    symlink /dev/socket/wpa_wlan0 /data/system/wpa_supplicant/wlan0
 
     # Node for USB service
     mkdir /dev/bus/ 755 root root
@@ -416,6 +416,7 @@ on property:sys.boot_completed=1
 # Powersave
 on property:sys.perf.profile=0
     stop mpdecision
+    write /sys/devices/system/cpu/cpu1/online 1
     write /sys/devices/system/cpu/cpu1/online 0
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor conservative
     write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor conservative
@@ -426,8 +427,10 @@ on property:sys.perf.profile=0
     write /sys/devices/system/cpu/cpufreq/conservative/freq_step 10
     write /sys/devices/platform/kgsl-2d0.0/kgsl/kgsl-2d0/gpuclk 96000000
     write /sys/devices/platform/kgsl-2d0.0/kgsl/kgsl-2d0/max_gpuclk 96000000
+    write /sys/devices/platform/kgsl-2d0.0/kgsl/kgsl-2d0/pwrscale/trustzone/governor ondemand
     write /sys/devices/platform/kgsl-2d1.1/kgsl/kgsl-2d1/gpuclk 96000000
     write /sys/devices/platform/kgsl-2d1.1/kgsl/kgsl-2d1/max_gpuclk 96000000
+    write /sys/devices/platform/kgsl-2d1.0/kgsl/kgsl-2d1/pwrscale/trustzone/governor ondemand
     write /sys/devices/platform/kgsl-3d0.0/kgsl/kgsl-3d0/gpuclk 128000000
     write /sys/devices/platform/kgsl-3d0.0/kgsl/kgsl-3d0/max_gpuclk 200000000
     write /sys/devices/platform/kgsl-3d0.0/kgsl/kgsl-3d0/pwrscale/trustzone/governor ondemand
@@ -436,28 +439,34 @@ on property:sys.perf.profile=0
 # Balanced
 on property:sys.perf.profile=1
     stop mpdecision
+    write /sys/devices/system/cpu/cpu0/online 1
     write /sys/devices/system/cpu/cpu1/online 1
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor intelliactive
     write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor intelliactive
     write /sys/devices/platform/kgsl-2d0.0/kgsl/kgsl-2d0/gpuclk 96000000
     write /sys/devices/platform/kgsl-2d0.0/kgsl/kgsl-2d0/max_gpuclk 200000000
+    write /sys/devices/platform/kgsl-2d0.0/kgsl/kgsl-2d0/pwrscale/trustzone/governor ondemand
     write /sys/devices/platform/kgsl-2d1.1/kgsl/kgsl-2d1/gpuclk 96000000
     write /sys/devices/platform/kgsl-2d1.1/kgsl/kgsl-2d1/max_gpuclk 200000000
+    write /sys/devices/platform/kgsl-2d1.0/kgsl/kgsl-2d1/pwrscale/trustzone/governor ondemand
     write /sys/devices/platform/kgsl-3d0.0/kgsl/kgsl-3d0/gpuclk 128000000
     write /sys/devices/platform/kgsl-3d0.0/kgsl/kgsl-3d0/max_gpuclk 300000000
     write /sys/devices/platform/kgsl-3d0.0/kgsl/kgsl-3d0/pwrscale/trustzone/governor ondemand
     start mpdecision
 
-# High performance
+# High
 on property:sys.perf.profile=2
     stop mpdecision
+    write /sys/devices/system/cpu/cpu0/online 1
     write /sys/devices/system/cpu/cpu1/online 1
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor performance
     write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor performance
     write /sys/devices/platform/kgsl-2d0.0/kgsl/kgsl-2d0/gpuclk 96000000
     write /sys/devices/platform/kgsl-2d0.0/kgsl/kgsl-2d0/max_gpuclk 200000000
+    write /sys/devices/platform/kgsl-2d0.0/kgsl/kgsl-2d0/pwrscale/trustzone/governor performance
     write /sys/devices/platform/kgsl-2d1.1/kgsl/kgsl-2d1/gpuclk 96000000
     write /sys/devices/platform/kgsl-2d1.1/kgsl/kgsl-2d1/max_gpuclk 200000000
+    write /sys/devices/platform/kgsl-2d1.0/kgsl/kgsl-2d1/pwrscale/trustzone/governor performance
     write /sys/devices/platform/kgsl-3d0.0/kgsl/kgsl-3d0/gpuclk 128000000
     write /sys/devices/platform/kgsl-3d0.0/kgsl/kgsl-3d0/max_gpuclk 400000000
     write /sys/devices/platform/kgsl-3d0.0/kgsl/kgsl-3d0/pwrscale/trustzone/governor performance
