--- a/rootdir/init.evita.rc
+++ b/rootdir/init.evita.rc
@@ -409,6 +409,10 @@ on property:sys.boot_completed=1
 
     # Set performance profile
     setprop sys.perf.profile 1
+    # Set up KSM
+    write /sys/kernel/mm/ksm/pages_to_scan 100
+    write /sys/kernel/mm/ksm/sleep_millisecs 500
+    write /sys/kernel/mm/ksm/run 1
 
 # CM Performance Profiles
 
