--- a/rootdir/init.evita.rc
+++ b/rootdir/init.evita.rc
@@ -404,15 +404,28 @@ on property:sys.boot_completed=1
     chmod 664 /sys/module/msm_mpdecision/slack_time_max_us
     chmod 664 /sys/module/msm_mpdecision/slack_time_min_us
 
+    # Set up KSM
+    write /sys/kernel/mm/ksm/pages_to_scan 100
+    write /sys/kernel/mm/ksm/sleep_millisecs 500
+    write /sys/kernel/mm/ksm/run 1
+
+    # Swap parameters
+    write /proc/sys/vm/page-cluster 0
+    write /proc/sys/vm/vfs_cache_pressure 85
+    write /proc/sys/vm/swappiness 70
+    write /proc/sys/vm/dirty_ratio 16
+    write /proc/sys/vm/dirty_background_ratio 12
+    write /proc/sys/vm/dirty_expire_centisecs 500
+    write /proc/sys/vm/dirty_writeback_centisecs 1000
+
+    # LMK values -> 6, 12, 26, 48, 64, 96 MB
+    write /sys/module/lowmemorykiller/parameters/minfree 1536,3072,6656,12288,16384,24576
+
     # Wake on volume
     write /sys/keyboard/vol_wakeup 1
 
     # Set performance profile
     setprop sys.perf.profile 1
-    # Set up KSM
-    write /sys/kernel/mm/ksm/pages_to_scan 100
-    write /sys/kernel/mm/ksm/sleep_millisecs 500
-    write /sys/kernel/mm/ksm/run 1
 
 # CM Performance Profiles
 
