--- a/rootdir/init.evita.rc
+++ b/rootdir/init.evita.rc
@@ -33,6 +33,7 @@ on fs
 
     # Mount all mmc partitions
     mount_all /fstab.evita
+    swapon_all /fstab.evita
 
     mkdir /data/tombstones 0771 system system
     symlink /data/tombstones /tombstones
@@ -419,7 +420,7 @@ on property:sys.boot_completed=1
     write /proc/sys/vm/dirty_writeback_centisecs 1000
 
     # LMK values -> 6, 12, 26, 48, 64, 96 MB
-    write /sys/module/lowmemorykiller/parameters/minfree 1536,3072,6656,12288,16384,24576
+    # write /sys/module/lowmemorykiller/parameters/minfree 1536,3072,6656,12288,16384,24576
 
     # Wake on volume
     write /sys/keyboard/vol_wakeup 1
