--- a/rootdir/init.evita.rc
+++ b/rootdir/init.evita.rc
@@ -406,6 +406,7 @@ on property:sys.boot_completed=1
     chmod 664 /sys/module/msm_mpdecision/slack_time_min_us
 
     # Set up KSM
+    write /sys/kernel/mm/ksm/deferred_timer 1
     write /sys/kernel/mm/ksm/pages_to_scan 100
     write /sys/kernel/mm/ksm/sleep_millisecs 500
     write /sys/kernel/mm/ksm/run 1
